--- a/backend/.env.template
+++ b/backend/.env.template
@@ -6,3 +6,5 @@ JWT_SECRET=supersecret
 COOKIE_SECRET=supersecret
 DATABASE_URL=
 DB_NAME=medusa-v2
+cd C:\Users\UmuT\Desktop\Projeler\Antigravity\medusa\lorinyo\storefront
+npm run dev
